# jupyter-jchannel

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  scripts.py
.github/workflows/: coveralls.yml  pypi.yml
docs/source/: conf.py  index.rst  jchannel.channel.rst  jchannel.rst  jchannel.server.rst  jchannel.types.rst
examples/: binder.ipynb  cloudflare.py  colab.ipynb  development.ipynb  local-frontend.ipynb  local-kernel.ipynb  local.ipynb  remote-binder.ipynb  remote-colab.ipynb  remote.ipynb
jchannel/: __init__.py  channel.py  registry.py  server.py  types.py
jchannel/frontend/: __init__.py  abstract.py  ipython.py
tests/: test_channel.py  test_init.py  test_registry.py  test_server.py  test_types.py
tests/frontend/: test_ipython.py
