[tool.poetry]
name = "jupyter-jchannel"
version = "0.3.8"
description = "Simple asynchronous RPC framework for Jupyter Notebooks. Facilitates calling JavaScript frontend code from Python kernel code and vice-versa."
authors = [
    "Marcelo Hashimoto <marcelo.hashimoto@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/hashiprobr/jupyter-jchannel"
packages = [
    { include = "jchannel" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.12.13"

[tool.poetry.group.dev.dependencies]
nbclassic = "^1.3.1"
notebook = "^7.4.3"
jupyterlab = "^4.4.4"
ipywidgets = "^8.1.7"
autopep8 = "^2.3.2"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"
sphinx = "^8.2.3"

[tool.poetry.scripts]
nbclassic = 'scripts:nbclassic'
notebook = 'scripts:notebook'
lab = 'scripts:lab'
tests = 'scripts:tests'
docs = 'scripts:docs'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
